[gd_scene load_steps=2 format=3 uid="uid://mtwyi60e6lmc"]

[ext_resource type="Script" uid="uid://c4ydlhj0sexib" path="res://Menus/Scripts/main_menu.gd" id="1_7cam4"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7cam4")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.4390491, 0.43904912, 0.43904912, 1)

[node name="GameTitle" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 167.0
offset_top = -20.0
offset_right = 377.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 32
text = "Game Title"
scroll_active = false
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -342.0
offset_top = -206.0
offset_right = -151.0
offset_bottom = 206.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 96

[node name="ContinueGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Continue Game"

[node name="NewGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Options" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Options"

[node name="ExitGame" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit Game"

[connection signal="pressed" from="VBoxContainer/ContinueGame" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitGame" to="." method="_on_exit_game_pressed"]
